# leg-movement-quantification

./: README.md  config.yaml  pyproject.toml  video_segmentation.py
dlc-models-pytorch/iteration-0/legmovementJun2-trainset95shuffle1/test/: pose_cfg.yaml
dlc-models-pytorch/iteration-0/legmovementJun2-trainset95shuffle1/train/: pytorch_config.yaml
training-datasets/iteration-0/UnaugmentedDataSet_legmovementJun2/: metadata.yaml
